<resources>
    <string name="app_name">Firebase Chat App</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_confirm_password">Enter Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="message">Message</string>
    <string name="profile">Profile</string>
    <string name="login">Login</string>
    <string name="save">Save</string>
    <string name="type_message">Type message</string>

</resources>