<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:gravity="center"
    tools:context=".ui.activity.LoginActivity">

    <TextView
        android:text="@string/sign_in"
        android:layout_margin="10dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textColor="@color/black"
        android:inputType="textEmailAddress"
        android:background="@drawable/edittext_background"
        android:padding="10dp"
        android:hint="@string/enter_email"/>

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textColor="@color/black"
        android:inputType="textPassword"
        android:background="@drawable/edittext_background"
        android:padding="10dp"
        android:hint="@string/enter_password"/>

    <Button
        android:id="@+id/btn_login"
        android:text="@string/login"
        android:layout_marginTop="18dp"
        android:textSize="18sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btn_sign_up"
        android:text="@string/sign_up"
        android:textSize="18sp"
        android:layout_marginTop="12dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>





</LinearLayout>