<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="12dp"
    android:gravity="center"
    tools:context=".ui.activity.SignUpActivity">



    <TextView
        android:text="@string/sign_up"
        android:layout_margin="10dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/et_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textColor="@color/black"
        android:inputType="textPersonName"
        android:background="@drawable/edittext_background"
        android:padding="10dp"
        android:hint="@string/enter_name"/>

    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textColor="@color/black"
        android:inputType="textEmailAddress"
        android:background="@drawable/edittext_background"
        android:padding="10dp"
        android:hint="@string/enter_email"/>

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textColor="@color/black"
        android:inputType="textPassword"
        android:background="@drawable/edittext_background"
        android:padding="10dp"
        android:hint="@string/enter_password"/>

    <EditText
        android:id="@+id/et_confirm_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:background="@drawable/edittext_background"
        android:padding="10dp"
        android:hint="@string/enter_confirm_password"/>


    <LinearLayout
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btn_sign_up"
            android:text="@string/sign_up"
            android:textSize="18sp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_marginEnd="8dp"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/btn_sign_in"
            android:text="@string/sign_in"
            android:textSize="18sp"
            android:layout_width="0dp"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"/>

    </LinearLayout>




</LinearLayout>